tests/miz/pass/attributes/pass_attributes_variable_use_001.miz
definition
  let X be empty set;
  theorem
    X = X;
  proof
  end;
end;
