tests/miz/fail/soundness/fail_soundness_unchecked_external_evidence_001.miz
theorem
  1 = 0;
proof
  by external_atp;
end;
